tests/machine/x/hs/record_assign.error

/workspace/mochi/tests/machine/x/hs/record_assign.hs:114:18: error:
    • Couldn't match expected type ‘Counter’ with actual type ‘Int’
    • In the first argument of ‘n’, namely ‘(c)’
      In the first argument of ‘(+)’, namely ‘n (c)’
      In the expression: n (c) + 1
    |
114 |     (let c = (n (c) + 1) in Nothing)
    |                  ^

/workspace/mochi/tests/machine/x/hs/record_assign.hs:120:3: error:
    • Couldn't match expected type ‘IO a0’ with actual type ‘()’
    • In a stmt of a 'do' block: inc c
      In the expression:
        do inc c
           print (n (c))
      In an equation for ‘main’:
          main
            = do inc c
                 print (n (c))
    |
120 |   inc c
    |   ^^^^^


Context around line 114:
  112| inc c =
  113|   fromMaybe (()) $
  114|     (let c = (n (c) + 1) in Nothing)
  115| 
  116| c = Counter {n = 0}
